test/parser/negative/AssignmentOperations.java
public class AssignmentOperations {
    public AssignmentOperations() {}
  public void m(int x) {
    x+=42;
    x-=42;
    x*=42;
    x/=42;
    x%=42;
    x|=42;
    x&=42;
    x^=42;
    x<<=42;
    x>>=42;
    x>>>=42;
  }
}
